tests/rosetta/out/Go/amicable-pairs.error
run error: exit status 1
# command-line-arguments
../../tests/rosetta/out/Go/amicable-pairs.go:45:10: cannot use append(_convSlice[int, any](sums), 0) (value of type []any) as []int value in assignment
../../tests/rosetta/out/Go/amicable-pairs.go:70:6: main redeclared in this block
	../../tests/rosetta/out/Go/amicable-pairs.go:38:6: other declaration of main
